Cache API should not match() HEAD requests

Per spec issue, the match()/matchAll() methods should not match HEAD
requests, yielding undefined (or an empty result set).

[1] https://github.com/slightlyoff/ServiceWorker/issues/710#issuecomment-236641802

BUG=633358

Review-Url: https://codereview.chromium.org/2204683002
Cr-Commit-Position: refs/heads/master@{#411172}

Former-commit-id: b482718f3ced3088afbd8bfdd7ff51fdfdc9bc8e